fixed shadows and component visibility

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   width: 90%;
   margin: 15px auto;
   height: 70vh;
-  background-color: rgba(255, 127, 80, 0.047);
+  background-color: rgba(255, 127, 80, 0.306);
   overflow: hidden;
   overflow-y: scroll;
 }
