--- a/src/Components/person/PersonOut/PersonOut.css
+++ b/src/Components/person/PersonOut/PersonOut.css
@@ -3,7 +3,7 @@
     background-color: #fff;
     padding: 10px;
     margin: 10px auto;
-    box-shadow: 0px 5px 4px #eee;
+    box-shadow: 0px 5px 6px rgba(85, 85, 85, 0.727);
     position: relative;
 }
 
