--- a/src/Components/person/person.css
+++ b/src/Components/person/person.css
@@ -3,13 +3,13 @@
     width: 90%;
     margin: 10px auto;
     padding: 5px;
-    box-shadow: 0px 5px 4px #eee;
+    box-shadow: 0px 5px 6px rgba(85, 85, 85, 0.727);
     transition: box-shadow .2s;
     position: relative;
 }
 
 .Person:hover{
-    box-shadow: 0px 5px 4px rgba(204, 204, 204, 0.761);
+    box-shadow: 0px 5px 4px rgba(179, 177, 177, 0.761);
 }
 
 .detail{
